<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Trade for student</string>

    <string name="address_select_title_name">地址选择</string>

    <string name="select_please">请选择</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Setting</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <string name="main_menu_center">User Center</string>
    <string name="main_menu_share">Share to QQ</string>

    <string name="header_main_login_tip">Click to login</string>

    <string name="main_tab_title_1">Home</string>
    <string name="main_tab_title_2">Chat</string>
    <string name="main_tab_title_3">Delegation</string>

    <string name="login_et_account">Account</string>
    <string name="login_et_password">Password</string>
    <string name="login_btn_login">Login</string>
    <string name="login_tv_tip">-------------- other way to login --------------</string>
    <string name="login_tv_tip_no_account">No account？</string>
    <string name="login_tv_forget_password">Forget account?</string>
    <string name="login_tv_register">Register now</string>
    <string name="register_btn_register">Register</string>
    <string name="login_error_account_not_exist">Account is not exist.</string>
    <string name="login_error_password_incorrect">Password is incorrect.</string>
    <string name="main_login_success">Login success</string>
    <string name="main_login_failed">Login falied</string>

    <string name="NoHttp_status_failed">Failed...</string>
    <string name="NoHttp_status_success">Success！！！</string>

    <string name="note_large_text" translatable="false">
    "Material is the metaphor."
    "\n\nThe foundational elements of print based design typography, grids, space, scale, color, "
    "and use of imagery guide visual treatments. These elements do far more than please the "
    "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
    "imagery, large scale typography, and intentional white space create a bold and graphic "
    "interface that immerse the user in the experience."
    "\nAn emphasis on user actions makes core functionality immediately apparent and provides "
    "waypoints for the user."
    </string>
    <string name="title_activity_scrolling">Please Login</string>
    <string name="large_text" translatable="false">


        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- item_commodity -->

    <string name="item_commodity_init_time">0000-00-00</string>
    <string name="item_commodity_intro">introduce</string>

    <!-- item_commodity -->

    <!-- activity_detail_commodity -->

    <string name="detail_main_1_name">name</string>
    <string name="main_login_canceled">Login canceled</string>
    <string name="server_error">Server Error</string>
    <string name="register_getCode">get code</string>
    <string name="register_phone_number">Phone number</string>
    <string name="register_identify_code">Identify code</string>
    <string name="register_password">password</string>
    <string name="register_password_again">password again</string>
    <string name="register_password_diff">password is diff</string>
    <string name="register_password_invalid">密码不合法</string>
    <string name="aty_register">注册账号</string>
    <string name="aty_user_info">User Center</string>
    <string name="header_main_edit_home_page">查看或编辑个人主页</string>
    <string name="main_menu_purchase_record">购买记录</string>
    <string name="main_menu_history_record">浏览历史</string>
    <string name="main_menu_favorite">我的收藏</string>
    <string name="login_please_input_name">请输入用户名</string>
    <string name="login_please_input_password">请输入密码</string>
    <string name="login_error_incorrect">用户名或密码错误</string>
    <string name="login_please_login">请登录</string>
    <string name="login_unlogin_tip">您好像还没有登录哦</string>
    <string name="main_menu_release_commodity">发布商品</string>
    <string name="personal_my_release">我发布的</string>
    <string name="personal_my_sell">我卖出的</string>
    <string name="personal_my_purchase">我买到的</string>
    <string name="personal_my_favorite">我收藏的</string>
    <string name="personal_be_priased">获赞</string>
    <string name="personal_following">粉丝数</string>
    <string name="personal_followers">关注数</string>
    <string name="title_activity_personal_info">个人主页</string>
    <string name="personal_edit_data">编辑资料</string>
    <string name="personal_tv_introduce">这个用户喜欢保持神秘哦</string>
    <string name="personal_credit_record">信誉记录</string>
    <string name="choose_city">请选择城市</string>
    <string name="detailLocation">详细地址</string>
    <string name="release_detail_note">详细介绍</string>
    <string name="personal_tv_from">来自：火星</string>
    <string name="personal_tv_campus">学校：无</string>
    <string name="campus_notice">【公告】 敬请关注</string>
    <string name="exit">退出</string>
    <string name="register_username">用户名</string>
    <string name="register_username_invalid">用户名不合法</string>
    <string name="register_email">邮箱</string>
    <string name="register_email_invalid">邮箱不合法</string>
    <string name="register_result_error_username_exist">用户已存在</string>
    <string name="register_result_error_email_existed">邮箱已被注册</string>
    <string name="register_result_error_phone_existed">手机号已被注册</string>
    <string name="register_result_error_string_invalid">字符串不合法</string>
    <string name="register_result_success">注册成功</string>
    <string name="modify_personal_tv_campus">修改</string>

    <!-- activity_detail_commodity -->
</resources>
