<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <include layout="@layout/toolbar" />

        <EditText
            android:id="@+id/register_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/register_password"/>

        <EditText
            android:id="@+id/register_et_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/register_password_again"/>

        <Button
            android:id="@+id/register_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/register_btn_register" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>