<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ninggc.trade.activity.account.PersonalInfoActivity"
    tools:showIn="@layout/activity_personal_info">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/personal_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="26dp"
                android:layout_marginStart="@dimen/personal_margin_left"
                android:text="@string/login_please_login"
                android:textSize="22sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="10"
                android:paddingBottom="4dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/personal_number_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/scroll_text_size"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/personal_number_1"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/scroll_text_size"
                    android:text="@string/personal_be_priased" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/personal_number_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/scroll_text_size"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/personal_number_2"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/scroll_text_size"
                    android:text="@string/personal_followers" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/personal_number_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/scroll_text_size"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/personal_number_3"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/scroll_text_size"
                    android:text="@string/personal_following" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/textview_border">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/personal_edit_data"
                        android:textSize="15sp" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

        <include layout="@layout/line_horizontal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/personal_info_tv_from"
                android:textSize="@dimen/scroll_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/personal_margin_left"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/personal_tv_from"
                android:textColor="@color/black_deep" />

            <TextView
                android:id="@+id/personal_info_tv_introduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_alignStart="@+id/personal_info_tv_from"
                android:layout_below="@+id/personal_info_tv_from"
                android:text="@string/personal_tv_introduce"
                android:textColor="@color/black_deep"
                android:textSize="@dimen/scroll_text_size" />
        </RelativeLayout>

        <View
            android:background="@color/LightGray"
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <RelativeLayout
            android:id="@+id/layout_1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/scroll_layout_top_bottom"
            android:paddingBottom="@dimen/scroll_layout_top_bottom"
            android:paddingLeft="16dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/panda" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/imageView1"
                android:text="@string/personal_credit_record"
                android:textSize="@dimen/scroll_text_size" />

            <ImageView
                android:src="@drawable/back"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:id="@+id/imageView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="19dp"
                android:layout_toStartOf="@+id/imageView2"
                android:text="0"
                android:textSize="@dimen/scroll_text_size" />

        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
