<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <TextView
            android:id="@+id/personal_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/personal_iv_image"
            android:layout_marginStart="22dp"
            android:text="@string/login_please_login"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/personal_tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/personal_iv_image"
            android:layout_alignStart="@+id/personal_tv_username"
            android:text="虽然没挣到钱，但在这里开心就好"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/personal_iv_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="37dp"
            android:layout_marginEnd="57dp"
            android:src="@drawable/panda" />
    </RelativeLayout>

    <View
        android:background="@color/LightGray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/personal_number_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/scroll_text_size"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personal_number_1"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/scroll_text_size"
                android:text="@string/personal_be_priased" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/personal_number_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/scroll_text_size"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personal_number_2"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/scroll_text_size"
                android:text="@string/personal_followers" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/personal_number_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/scroll_text_size"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personal_number_3"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/scroll_text_size"
                android:text="@string/personal_following" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:background="@color/LightGray"
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <include layout="@layout/content_personal" />

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:layout_anchor="@id/app_bar"-->
        <!--app:layout_anchorGravity="bottom|end"-->
        <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->

</LinearLayout>
